Add eth-evaluation to auto-trash

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -71,6 +71,7 @@ match
     "^From:.*exchange@ethz\.ch" in headers or
     "^From:.*careercenter@news\.ethz\.ch" in headers or
     "^From:.*didaktischeausbildung@ethz\.ch" in headers or
+    "^From:.*evasys@let\.ethz\.ch" in headers or
     "^From:.*noreply@moodle-app2\.let\.ethz\.ch" in headers or
     "^From:.*no-reply@piazza\.com" in headers
     #
