Add miles&more to auto-trash

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -53,6 +53,7 @@ match
     "^From:.*email\.campaign@sg\.booking\.com" in headers or
     "^From:.*mail@e\.milesandmore\.com" in headers or
     "^From:.*mail@mailing\.milesandmore\.com" in headers or
+    "^From:.*newsletter@mailing\.milesandmore\.com" in headers or
     "^From:.*newsletter@your\.lufthansa-group\.com" in headers or
     #
     "^From:.*no-reply@business\.amazon\.com" in headers or
