Add flipboard to spam

--- a/.fdm.conf
+++ b/.fdm.conf
@@ -109,6 +109,7 @@ match
     "^From:.*@go\.mathworks\.com" in headers or
     "^From:.*diversity@ethz\.ch" in headers or
     "^From:.*gastro@news\.ethz\.ch" in headers or
+    "^From:.*no-reply@flipboard\.com" in headers or
     #
     "^From:.*apis@tisknise\.cz" in headers
     #
