Copy-over binds for sidebar

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -22,7 +22,17 @@ bind editor \ck kill-eol
 # }}}
 
 # pager {{{
+# sidebar {{{
+bind pager <Enter> sidebar-open
+bind pager <Return> sidebar-open
+bind pager \cp sidebar-prev
+bind pager \cn sidebar-next
+macro pager \ck "\cp\cp\cp\cp" "box-kkkk"
+macro pager \cj "\cn\cn\cn\cn" "box-jjjj"
+
 bind pager cc sidebar-toggle-visible
+macro pager cd "<change-folder>?" "change-box"
+# }}}
 
 bind pager k previous-line
 bind pager j next-line
