Copy-over bind for (mutt-)tag'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -59,6 +59,8 @@ bind pager mb bounce-message
 bind pager mf forward-message
 bind pager mr reply
 
+macro pager tt <tag-message>h "tag"
+
 bind pager aa view-attachments
 bind pager at view-raw-message
 bind pager ae edit-type
