Copy-over bind for notmuch-tag'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -60,6 +60,7 @@ bind pager mf forward-message
 bind pager mr reply
 
 macro pager tt <tag-message>h "tag"
+bind pager rr modify-labels
 
 bind pager aa view-attachments
 bind pager at view-raw-message
