Auto-open (sidebar-)box in |pager|

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -23,8 +23,8 @@ bind editor \ck kill-eol
 
 # pager {{{
 # sidebar {{{
-bind pager <Enter> sidebar-open
-bind pager <Return> sidebar-open
+macro pager <Enter> <sidebar-open>l "box-open"
+macro pager <Return> <sidebar-open>l "box-open"
 bind pager \cp sidebar-prev
 bind pager \cn sidebar-next
 macro pager \ck "\cp\cp\cp\cp" "box-kkkk"
@@ -136,8 +136,8 @@ macro index t: "<enter-command>exec tag-prefix-cond " "tag:<command>"
 # }}}
 
 # change box {{{
-bind index <Enter> sidebar-open
-bind index <Return> sidebar-open
+macro index <Enter> <sidebar-open> "box-open"
+macro index <Return> <sidebar-open> "box-open"
 bind index \cp sidebar-prev
 bind index \cn sidebar-next
 macro index \ck "\cp\cp\cp\cp" "box-kkkk"
