Add binds for delet'g

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -34,6 +34,22 @@ bind pager cc sidebar-toggle-visible
 macro pager cd "<change-folder>?" "change-box"
 # }}}
 
+# delete {{{
+macro pager dd "\
+<delete-message>\
+ss\
+" "delete"
+
+macro pager dD "\
+<purge-message>\
+ss\
+" "delete!"
+
+macro pager du "\
+<undelete-message>\
+" "undelete"
+# }}}
+
 bind pager k previous-line
 bind pager j next-line
 macro pager K kkkk "4k"
