--- a/.fdm.conf
+++ b/.fdm.conf
@@ -37,8 +37,7 @@ action "print"
 # the undesirables {{{
 # NOTE:
 # 1. (vim-)convert raw-addresses to criteria
-#   :'<,'>sm/\./\\./g
-#   :'<,'>sm/\(.*\)/    "^From:.*\1" in headers or/
+#   :'<,'>sm/\./\\./g || :'<,'>sm/\(.*\)/    "^From:.*\1" in headers or/
 
 # move to trash {{{
 match
@@ -62,6 +61,7 @@ match
     "^From:.*customer-reviews-messages@amazon\.com" in headers or
     "^From:.*marketplace-messages@amazon\.com" in headers or
     #
+    "^From:.*noreply@productnews\.galaxus\.ch" in headers or
     "^From:.*productnews@galaxus\.ch" in headers or
     "^From:.*resale@galaxus\.ch" in headers or
     "^From:.*noreply@notifications\.galaxus\.ch" in headers or
@@ -86,6 +86,7 @@ match
 # direct deletion {{{
 # spam
 match
+    "^From:.*@.*indiaplays\.com.*" in headers or
     "^From:.*@.*kraftangan\.gov\.my" in headers or
     "^From:.*@.*kollect\.ai.*" in headers or
     "^From:.*@.*transfiriendo\.com.*" in headers or
@@ -103,6 +104,7 @@ match
     "^From:.*@.*sion\.ais\.ne\.jp.*" in headers or
     "^From:.*@.*didareshop\.com.*" in headers or
     "^From:.*@catpro\.io" in headers or
+    "^From:.*@mozart\.livingopera\.org" in headers or
     "^From:.*Ashish.Biswas@icar.gov.in" in headers or
     #
     "^From:.*@email\.wolfram\.com" in headers or
@@ -111,6 +113,12 @@ match
     "^From:.*gastro@news\.ethz\.ch" in headers or
     "^From:.*no-reply@flipboard\.com" in headers or
     #
+    "^From:.*postmaster@smtp\.assessment\.gr" in headers or
+    "^From:.*support@affiligate\.com" in headers or
+    "^From:.*dw-1298858contact@insistglobal\.com" in headers or
+    "^From:.*info@montagnes-sciences\.fr" in headers or
+    "^From:.*BDiduxHIFF@yellowdig\.net" in headers or
+    "^From:.*ecotto@kenzahn\.com" in headers or
     "^From:.*apis@tisknise\.cz" in headers
     #
     action "delete"
