--- a/.fdm.conf
+++ b/.fdm.conf
@@ -87,7 +87,7 @@ match
 # spam
 match
     "^From:.*@.*indiaplays\.com.*" in headers or
-    "^From:.*@.*kraftangan\.gov\.my" in headers or
+    "^From:.*@.*kraftangan\.gov\.my.*" in headers or
     "^From:.*@.*kollect\.ai.*" in headers or
     "^From:.*@.*transfiriendo\.com.*" in headers or
     "^From:.*@.*fibrasil\.com.*" in headers or
@@ -103,15 +103,15 @@ match
     "^From:.*@.*oasdehe.com.*" in headers or
     "^From:.*@.*sion\.ais\.ne\.jp.*" in headers or
     "^From:.*@.*didareshop\.com.*" in headers or
-    "^From:.*@catpro\.io" in headers or
-    "^From:.*@mozart\.livingopera\.org" in headers or
-    "^From:.*Ashish.Biswas@icar.gov.in" in headers or
+    "^From:.*@.*catpro\.io.*" in headers or
+    "^From:.*@.*mozart\.livingopera\.org.*" in headers or
     #
     "^From:.*@email\.wolfram\.com" in headers or
     "^From:.*@go\.mathworks\.com" in headers or
     "^From:.*diversity@ethz\.ch" in headers or
     "^From:.*gastro@news\.ethz\.ch" in headers or
     "^From:.*no-reply@flipboard\.com" in headers or
+    "^From:.*support@help\.instapaper\.com" in headers or
     #
     "^From:.*postmaster@smtp\.assessment\.gr" in headers or
     "^From:.*support@affiligate\.com" in headers or
@@ -119,6 +119,7 @@ match
     "^From:.*info@montagnes-sciences\.fr" in headers or
     "^From:.*BDiduxHIFF@yellowdig\.net" in headers or
     "^From:.*ecotto@kenzahn\.com" in headers or
+    "^From:.*Ashish.Biswas@icar\.gov\.in" in headers or
     "^From:.*apis@tisknise\.cz" in headers
     #
     action "delete"
