Add sync binds for pager

--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -24,7 +24,7 @@ unmailboxes \
 <check-stats>\
 " "unbox all"
 
-macro index sa "\
+macro pager,index sa "\
 sm\
 <enter-command>set wait_key=no<Return>\
 <shell-escape> mbsync ALL<Return>\
