--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -75,6 +75,24 @@ bind pager mb bounce-message
 bind pager mf forward-message
 bind pager mr reply
 
+# sync {{{
+macro pager sm "\
+<sync-mailbox><Return><check-stats>\
+" "commit mail"
+macro pager sn "\
+<enter-command>set wait_key=no<Return>\
+<shell-escape>fdm fetch<Return>\
+<shell-escape>notmuch new<Return>\
+<enter-command>set wait_key=yes<Return>\
+<check-stats>\
+" "commit notmuch"
+
+macro pager ss "\
+sm\
+sn\
+" "commit"
+# }}}
+
 macro pager tt <tag-message>h "tag"
 bind pager rr modify-labels
 
