Move mbsync-conf under ~/.config

--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -27,7 +27,7 @@ unmailboxes \
 macro pager,index sa "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync ALL<Return>\
+<shell-escape> mbsync -c "$HOME/.config/mbsync/config" ALL<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push *-INBOX "
