--- a/.config/neomutt/box/specific/outlook/specific.conf
+++ b/.config/neomutt/box/specific/outlook/specific.conf
@@ -12,7 +12,7 @@ macro index yx "\
 macro index sr "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -V OUTLOOK_ALL<Return>\
+<shell-escape> mbsync -c "$HOME/.config/mbsync/config" -V OUTLOOK_ALL<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
