Move fdm-conf under ~/.config

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -68,7 +68,7 @@ macro pager sm "\
 " "commit mail"
 macro pager sn "\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>fdm fetch<Return>\
+<shell-escape>fdm -f "$HOME/.config/fdm/config" fetch<Return>\
 <shell-escape>notmuch new<Return>\
 <enter-command>set wait_key=yes<Return>\
 <check-stats>\
@@ -128,7 +128,7 @@ macro index sm "\
 " "commit mail"
 macro index sn "\
 <enter-command>set wait_key=no<Return>\
-<shell-escape>fdm fetch<Return>\
+<shell-escape>fdm -f "$HOME/.config/fdm/config" fetch<Return>\
 <shell-escape>notmuch new<Return>\
 <enter-command>set wait_key=yes<Return>\
 <check-stats>\
