--- a/.fdm.conf
+++ b/.fdm.conf
@@ -43,6 +43,7 @@ action "print"
 match
     "^From:.*paypal@mail\.paypal\.de" in headers or
     "^From:.*ubs_switzerland@mailing\.ubs\.com" in headers or
+    "^From:.*hello@mail\.plex\.tv" in headers or
     #
     "^From:.*no-reply@accounts\.google\.com" in headers or
     "^From:.*@\.*instagram\.*" in headers or
