Move notmuch-db under $XDG_DATA_HOME

--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -1,4 +1,4 @@
-set nm_default_url = "notmuch://$my_mail_path"
+set nm_default_url = "notmuch://$HOME/.local/share/notmuch/default/"
 
 # exclude these (implicit) tags from %g
 set hidden_tags = \
