Use default fore&back-ground

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -152,7 +152,7 @@ set folder_format = "\
 # color {{{
 # genereal {{{
 # default
-color normal color015 color016
+color normal default default
 # active
 color indicator bold color231 color237
 # }}}
@@ -161,77 +161,77 @@ color indicator bold color231 color237
 # index {{{
 # rows {{{
 # tagged
-color index color212 color016 "~T"
+color index color212 default "~T"
 # new
-color index color117 color016 "~N"
+color index color117 default "~N"
 # deleted
-color index color197 color016 "~D"
+color index color197 default "~D"
 # }}}
 
 # columns {{{
-color index_number color245 color016
-color index_date color245 color016
-color index_size color245 color016
-color tree color245 color016  # thread-indicator
+color index_number color245 default
+color index_date color245 default
+color index_size color245 default
+color tree color245 default  # thread-indicator
 
-color index_tags color067 color016
+color index_tags color067 default
 # }}}
 # }}}
 
 # sidebar {{{
 # default
-color sidebar_background color015 color016
+color sidebar_background default default
 # active
 color sidebar_indicator bold color231 color237
 # selected (to be activated)
-color sidebar_highlight color141 color016
-color sidebar_divider color245 color016
+color sidebar_highlight color141 default
+color sidebar_divider color245 default
 # }}}
 
 # compose {{{
-color compose header color245 color016
-color compose security_none color245 color016
+color compose header color245 default
+color compose security_none color245 default
 
-color compose security_sign color117 color016
-color compose security_encrypt color141 color016
-color compose security_both color141 color016
+color compose security_sign color117 default
+color compose security_encrypt color141 default
+color compose security_both color141 default
 # }}}
 
 # status and below {{{
-color status color245 color016
+color status color245 default
 
-color message color231 color016
-color prompt color231 color016
-color error color197 color016
+color message color231 default
+color prompt color231 default
+color error color197 default
 # }}}
 
-color search color016 color015  # pager only
+color search default default  # pager only
 # }}}
 
 # email {{{
 # header {{{
-color header color245 color016
-color header color212 color016 "^Subject:\\s.*"
-color header color117 color016 "^From:\\s.*"
-color header color117 color016 "^To:\\s.*"
+color header color245 default
+color header color212 default "^Subject:\\s.*"
+color header color117 default "^From:\\s.*"
+color header color117 default "^To:\\s.*"
 # }}}
 
-color attach_headers color245 color016
+color attach_headers color245 default
 
 # body {{{
 # line-number gutter
-color body color245 color016 "^[0-9]+"
+color body color245 default "^[0-9]+"
 
 # mail address
-color body color117 color016 "\\S+@\\S+\\.\\S+"
+color body color117 default "\\S+@\\S+\\.\\S+"
 # URL
-color body color117 color016 "\\S+://\\S.+\.\\S+"
+color body color117 default "\\S+://\\S.+\.\\S+"
 
 # >quote (~Markdown)
-color body color141 color016 "\\s{2,}>+\\s+"
+color body color141 default "\\s{2,}>+\\s+"
 
 # separator (~Markdown)
-color body color245 color016 "\\s{2,}-{3,}$"
+color body color245 default "\\s{2,}-{3,}$"
 # }}}
 # }}}
 # }}}
