Correct non-standard bright-white

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -154,7 +154,7 @@ set folder_format = "\
 # default
 color normal default default
 # active
-color indicator bold color231 color237
+color indicator bold default color008
 # }}}
 
 # component-specifics {{{
@@ -182,7 +182,7 @@ color index_tags color067 default
 # default
 color sidebar_background default default
 # active
-color sidebar_indicator bold color231 color237
+color sidebar_indicator bold default color008
 # selected (to be activated)
 color sidebar_highlight color141 default
 color sidebar_divider color245 default
@@ -200,8 +200,8 @@ color compose security_both color141 default
 # status and below {{{
 color status color245 default
 
-color message color231 default
-color prompt color231 default
+color message default default
+color prompt default default
 color error color197 default
 # }}}
 
