Do NOT use bold for current-line

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -154,7 +154,7 @@ set folder_format = "\
 # default
 color normal default default
 # active
-color indicator bold default color008
+color indicator default color008
 # }}}
 
 # component-specifics {{{
