Define vars for palette

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -150,29 +150,39 @@ set folder_format = "\
 # }}}
 
 # color {{{
+set my_palette_black = "color000"
+set my_palette_grey_dark = "color008"
+set my_palette_grey_bright = "color007"
+set my_palette_white = "color015"
+
+set my_palette_red = "color001"
+set my_palette_magenta = "color005"
+set my_palette_cyan = "color006"
+set my_palette_purple = "color141"
+
 # genereal {{{
 # default
 color normal default default
 # active
-color indicator default color008
+color indicator default "$my_palette_grey_dark"
 # }}}
 
 # component-specifics {{{
 # index {{{
 # rows {{{
 # tagged
-color index color005 default "~T"
+color index "$my_palette_magenta" default "~T"
 # new
-color index color006 default "~N"
+color index "$my_palette_cyan" default "~N"
 # deleted
-color index color001 default "~D"
+color index "$my_palette_red" default "~D"
 # }}}
 
 # columns {{{
-color index_number color007 default
-color index_date color007 default
-color index_size color007 default
-color tree color007 default  # thread-indicator
+color index_number "$my_palette_grey_bright" default
+color index_date "$my_palette_grey_bright" default
+color index_size "$my_palette_grey_bright" default
+color tree "$my_palette_grey_bright" default  # thread-indicator
 
 color index_tags color067 default
 # }}}
@@ -182,27 +192,27 @@ color index_tags color067 default
 # default
 color sidebar_background default default
 # active
-color sidebar_indicator bold default color008
+color sidebar_indicator bold default "$my_palette_grey_dark"
 # selected (to be activated)
-color sidebar_highlight color141 default
-color sidebar_divider color007 default
+color sidebar_highlight "$my_palette_purple" default
+color sidebar_divider "$my_palette_grey_bright" default
 # }}}
 
 # compose {{{
-color compose header color007 default
-color compose security_none color007 default
+color compose header "$my_palette_grey_bright" default
+color compose security_none "$my_palette_grey_bright" default
 
-color compose security_sign color006 default
-color compose security_encrypt color141 default
-color compose security_both color141 default
+color compose security_sign "$my_palette_cyan" default
+color compose security_encrypt "$my_palette_purple" default
+color compose security_both "$my_palette_purple" default
 # }}}
 
 # status and below {{{
-color status color007 default
+color status "$my_palette_grey_bright" default
 
 color message default default
 color prompt default default
-color error color001 default
+color error "$my_palette_red" default
 # }}}
 
 color search default default  # pager only
@@ -210,28 +220,28 @@ color search default default  # pager only
 
 # email {{{
 # header {{{
-color header color007 default
-color header color005 default "^Subject:\\s.*"
-color header color006 default "^From:\\s.*"
-color header color006 default "^To:\\s.*"
+color header "$my_palette_grey_bright" default
+color header "$my_palette_magenta" default "^Subject:\\s.*"
+color header "$my_palette_cyan" default "^From:\\s.*"
+color header "$my_palette_cyan" default "^To:\\s.*"
 # }}}
 
-color attach_headers color007 default
+color attach_headers "$my_palette_grey_bright" default
 
 # body {{{
 # line-number gutter
-color body color007 default "^[0-9]+"
+color body "$my_palette_grey_bright" default "^[0-9]+"
 
 # mail address
-color body color006 default "\\S+@\\S+\\.\\S+"
+color body "$my_palette_cyan" default "\\S+@\\S+\\.\\S+"
 # URL
-color body color006 default "\\S+://\\S.+\.\\S+"
+color body "$my_palette_cyan" default "\\S+://\\S.+\.\\S+"
 
 # >quote (~Markdown)
-color body color141 default "\\s{2,}>+\\s+"
+color body "$my_palette_purple" default "\\s{2,}>+\\s+"
 
 # separator (~Markdown)
-color body color007 default "\\s{2,}-{3,}$"
+color body "$my_palette_grey_bright" default "\\s{2,}-{3,}$"
 # }}}
 # }}}
 # }}}
