Use grey-bright for tags

--- a/.config/neomutt/conf/visual.conf
+++ b/.config/neomutt/conf/visual.conf
@@ -184,7 +184,7 @@ color index_date "$my_palette_grey_bright" default
 color index_size "$my_palette_grey_bright" default
 color tree "$my_palette_grey_bright" default  # thread-indicator
 
-color index_tags color067 default
+color index_tags "$my_palette_grey_bright" default
 # }}}
 # }}}
 
