Cleanup eth-boxes

--- a/.config/neomutt/box/specific/eth/auto.conf
+++ b/.config/neomutt/box/specific/eth/auto.conf
@@ -11,8 +11,6 @@ macro index ce \
 # }}}
 
 virtual-mailboxes \
-    "_ETH" "notmuch://?query=folder:$my_mail_raw_relative_path/eth/.INBOX" \
-    "_ETH_X" "notmuch://?query=folder:$my_mail_raw_relative_path/eth/.x" \
-    "_ETH_Z" "notmuch://?query=folder:$my_mail_raw_relative_path/eth/.z"
+    "_ETH" "notmuch://?query=folder:$my_mail_raw_relative_path/eth/.INBOX"
 
 # vim: filetype=neomuttrc foldmethod=marker
