--- a/.config/mbsync/config
+++ b/.config/mbsync/config
@@ -42,13 +42,9 @@ Far :XYZ_REMOTE:
 Near :XYZ_LOCAL:
 Patterns "Sent" "Trash" "Drafts"
 
-Group XYZ_ALL
+Group XYZ
 Channel XYZ_INBOX
 Channel XYZ_X
-Channel XYZ_MISC
-
-Group XYZ_SYS
-Channel XYZ_INBOX
 Channel XYZ_MISC
 # }}}
 # }}}
@@ -90,13 +86,9 @@ Far :OUTLOOK_REMOTE:
 Near :OUTLOOK_LOCAL:
 Patterns "Sent" "Deleted" "Drafts"
 
-Group OUTLOOK_ALL
+Group OUTLOOK
 Channel OUTLOOK_INBOX
 Channel OUTLOOK_X
-Channel OUTLOOK_MISC
-
-Group OUTLOOK_SYS
-Channel OUTLOOK_INBOX
 Channel OUTLOOK_MISC
 # }}}
 # }}}
@@ -140,13 +132,9 @@ Far :ETH_REMOTE:
 Near :ETH_LOCAL:
 Patterns "Skickat" "Trash" "Drafts"
 
-Group ETH_ALL
+Group ETH
 Channel ETH_INBOX
 Channel ETH_X
-Channel ETH_MISC
-
-Group ETH_SYS
-Channel ETH_INBOX
 Channel ETH_MISC
 # }}}
 # }}}
