Use box-level virtual-boxes for verbose-mode

--- a/.config/neomutt/box/specific/multi.conf
+++ b/.config/neomutt/box/specific/multi.conf
@@ -1,25 +1,19 @@
 macro index ca "\
 <enter-command>\
-named-mailboxes \
-"ETH_INBOX" "~/mail/raw/eth/.INBOX/" \
-"ETH_SENT" "~/mail/raw/eth/.Skickat/" \
-"ETH_DRAFT" "~/mail/raw/eth/.Drafts/" \
-"OUTLOOK_INBOX" ~/mail/raw/outlook/.INBOX/ \
-"OUTLOOK_SENT" ~/mail/raw/outlook/.Sent/ \
-"OUTLOOK_DRAFT" ~/mail/raw/outlook/.Drafts/ \
+virtual-mailboxes \
+"_XYZ" "notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/" \
+"_OUTLOOK" "notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/" \
+"_ETH" "notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/" \
 <Return>\
 <check-stats>\
 " "box all"
 
 macro index cA "\
 <enter-command>\
-unmailboxes \
-"~/mail/raw/eth/.INBOX" \
-"~/mail/raw/eth/.Skickat" \
-"~/mail/raw/eth/.Drafts" \
-~/mail/raw/outlook/.INBOX \
-~/mail/raw/outlook/.Sent \
-~/mail/raw/outlook/.Drafts \
+unvirtual-mailboxes \
+"notmuch://?query=folder:/$my_mail_raw_relative_path/xyz/\\..*/" \
+"notmuch://?query=folder:/$my_mail_raw_relative_path/outlook/\\..*/" \
+"notmuch://?query=folder:/$my_mail_raw_relative_path/eth/\\..*/" \
 <Return>\
 <check-stats>\
 " "unbox all"
