Check-stats when open'g mailbox with bind

--- a/.config/neomutt/conf/bind.conf
+++ b/.config/neomutt/conf/bind.conf
@@ -157,8 +157,8 @@ macro index t: "<enter-command>exec tag-prefix-cond " "tag:<command>"
 # }}}
 
 # change box {{{
-macro index <Enter> <sidebar-open> "box-open"
-macro index <Return> <sidebar-open> "box-open"
+macro index <Enter> <sidebar-open><check-stats> "box-open"
+macro index <Return> <sidebar-open><check-stats> "box-open"
 bind index \cp sidebar-prev
 bind index \cn sidebar-next
 macro index \ck "\cp\cp\cp\cp" "box-kkkk"
