Use global REMOTE-vbox (ist'd of only inbox)

--- a/.config/neomutt/box/common/notmuch.conf
+++ b/.config/neomutt/box/common/notmuch.conf
@@ -10,6 +10,6 @@ _SENT"
 virtual-mailboxes \
     "MAIN" "notmuch://?query=tag:MAIN" \
     "TRASH" "notmuch://?query=folder:$my_mail_all_relative_path/.trash" \
-    "INBOX" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*\\/\\.INBOX/"
+    "REMOTE" "notmuch://?query=folder:/$my_mail_raw_relative_path\\/.*/"
 
 # vim: filetype=neomuttrc foldmethod=marker
