Remove bind for mov'g to box-specific x-dir

--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -15,7 +15,7 @@ set mbox_type = Maildir
 # do NOT distinguish |old| from unread/new
 set mark_old = no
 
-macro index yz "\
+macro index yx "\
 <tag-prefix>\
 <save-message>$my_mail_all_absolute_path/.x\
 " "move to global x"
