--- a/.config/neomutt/box/common/box.conf
+++ b/.config/neomutt/box/common/box.conf
@@ -1,4 +1,4 @@
-set my_mail_path = "$HOME/mail/"
+set my_mail_path = "$HOME/.local/share/mail/"
 set my_mail_raw_relative_path = "raw"
 set my_mail_raw_absolute_path = "$my_mail_path/$my_mail_raw_relative_path"
 set my_mail_all_relative_path = "all"
