--- a/.config/fdm/config
+++ b/.config/fdm/config
@@ -1,9 +1,10 @@
 # setup {{{
 # mail-directories {{{
-$all_dir = "%h/mail/all/"
+$base_dir = "%h/.local/share/mail/"
+$all_dir = "${base_dir}/all/"
 
 # account-specific {{{
-$raw_dir = "%h/mail/raw/"
+$raw_dir = "${base_dir}/raw/"
 
 $path_xyz = "${raw_dir}/xyz"
 account "xyz"
