--- a/.config/neomutt/box/specific/eth/specific.conf
+++ b/.config/neomutt/box/specific/eth/specific.conf
@@ -7,7 +7,7 @@ set record = "+.Skickat"
 macro index sr "\
 sm\
 <enter-command>set wait_key=no<Return>\
-<shell-escape> mbsync -c "$HOME/.config/mbsync/config" -V ETH_ALL<Return>\
+<shell-escape> mbsync -c "$HOME/.config/mbsync/config" -V ETH<Return>\
 <enter-command>set wait_key=yes<Return>\
 ss\
 " "push to remote"
